cambio de contactos

--- a/contacto/index.html
+++ b/contacto/index.html
@@ -102,9 +102,13 @@
 
   <!-- Main Content -->
   <div class="container">
+
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+
+<!--End mc_embed_signup-->
         <p>Tienes preguntas del sistema <b>constructivo en PVC?</b>... Necesitas ayuda para tu requerimiento?... escribenos y te contactaremos</p>
+
         <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
         <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
         <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
