--- a/experiencias/experiencia-2.html
+++ b/experiencias/experiencia-2.html
@@ -22,7 +22,7 @@
   <link href="../css/clean-blog.css" rel="stylesheet">
 
   <!--Bootstrap para cards-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
   <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -103,9 +103,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>Experiencias</h1>
-            <span class="subheading">Conoce nuestros casos de éxito</span>
+          <div class="site-heading">
+            <h1>CERRAMIENTOS EN PVC</h1>
+            <!--<span class="subheading">Conoce nuestros casos de éxito</span>-->
           </div>
         </div>
       </div>
@@ -134,22 +134,22 @@
             <div class="carousel-item active">
               <img src="../img/exp/REFICAR 2.jpg" class="d-block w-100" alt="oficinas-prefabricadas">
                 <div class="carousel-caption d-none d-md-block" >
-                  <h5>First slide label</h5>
-                  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                  <h5>Oficinas Prefabricadas en PVC</h5>
+                  <!--<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
               </div>
             </div>
             <div class="carousel-item">
               <img src="../img/exp/IMG-20170509-WA0003.jpg" class="d-block w-100" alt="campamentos-pvc">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                <h5>Campamentos Prefabricados en PVC</h5>
+                <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
             <div class="carousel-item">
               <img src="../img/exp/galeria001- campamentos009.jpg" class="d-block w-100" alt="campamentos-prefabricados">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                <h5>Campamentos Prefabricados en PVC</h5>
+                <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
           </div>
@@ -190,7 +190,6 @@
                 </a>
               </li>
             </ul>
-            <br>
             <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
           </div>
         </div>
