--- a/experiencias/experiencia-3.html
+++ b/experiencias/experiencia-3.html
@@ -17,7 +17,7 @@
 <link href="../css/clean-blog.css" rel="stylesheet">
 
 <!--Bootstrap para cards-->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -98,9 +98,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="page-heading">
-          <h1>Experiencias</h1>
-          <span class="subheading">Conoce nuestros casos de éxito</span>
+        <div class="site-heading">
+          <h1>CASAS EN PVC</h1>
+          <!--<span class="subheading">Conoce nuestros casos de éxito</span>-->
         </div>
       </div>
     </div>
@@ -126,22 +126,22 @@
           <div class="carousel-item active">
             <img src="../img/exp/casa-vacacional-2.jpg" class="d-block w-100" alt="casa-pvc">
               <div class="carousel-caption d-none d-md-block" >
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                <h5>Casa prefabircada en PVC</h5>
+                <!--<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
             </div>
           </div>
           <div class="carousel-item">
             <img src="../img/exp/casa-vacacional-1.jpg" class="d-block w-100" alt="casa-prefabricada">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Casa prefabircada en PVC</h5>
+              <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
             </div>
           </div>
           <div class="carousel-item">
             <img src="../img/exp/casa-pvc.jpg" class="d-block w-100" alt="casa-pvc">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Casa prefabircada en PVC</h5>
+              <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
             </div>
           </div>
         </div>
@@ -182,7 +182,6 @@
               </a>
             </li>
           </ul>
-          <br>
           <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
         </div>
       </div>
