--- a/experiencias/experiencia-1.html
+++ b/experiencias/experiencia-1.html
@@ -135,21 +135,21 @@
             <div class="carousel-item active">
               <img src="../img/exp/colegio-pvc-1.jpg" class="d-block w-100" alt="colegio-pvc">
                 <div class="carousel-caption d-none d-md-block" >
-                  <h5>Colegio en PVC</h5>
+                  <h5 style="background-color: rgba(90, 120, 211, 0.6);">Colegio en PVC</h5>
                   <!--<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
               </div>
             </div>
             <div class="carousel-item">
               <img src="../img/exp/casa-pvc.jpg" class="d-block w-100" alt="casas-prefabricadas">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Casa Prefabricada en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa Prefabricada en PVC</h5>
                 <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
             <div class="carousel-item">
               <img src="../img/exp/exp1.jpg" class="d-block w-100" alt="oficinas-pvc">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Casa Prefabricada en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa Prefabricada en PVC</h5>
                 <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
