--- a/experiencias/experiencia-2.html
+++ b/experiencias/experiencia-2.html
@@ -134,21 +134,21 @@
             <div class="carousel-item active">
               <img src="../img/exp/REFICAR 2.jpg" class="d-block w-100" alt="oficinas-prefabricadas">
                 <div class="carousel-caption d-none d-md-block" >
-                  <h5>Oficinas Prefabricadas en PVC</h5>
+                  <h5 style="background-color: rgba(90, 120, 211, 0.6);">Oficinas Prefabricadas en PVC</h5>
                   <!--<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
               </div>
             </div>
             <div class="carousel-item">
               <img src="../img/exp/IMG-20170509-WA0003.jpg" class="d-block w-100" alt="campamentos-pvc">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Campamentos Prefabricados en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Campamentos Prefabricados en PVC</h5>
                 <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
             <div class="carousel-item">
               <img src="../img/exp/galeria001- campamentos009.jpg" class="d-block w-100" alt="campamentos-prefabricados">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Campamentos Prefabricados en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Campamentos Prefabricados en PVC</h5>
                 <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
