--- a/experiencias/experiencia-3.html
+++ b/experiencias/experiencia-3.html
@@ -126,21 +126,21 @@
           <div class="carousel-item active">
             <img src="../img/exp/casa-vacacional-2.jpg" class="d-block w-100" alt="casa-pvc">
               <div class="carousel-caption d-none d-md-block" >
-                <h5>Casa prefabircada en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa prefabircada en PVC</h5>
                 <!--<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
             </div>
           </div>
           <div class="carousel-item">
             <img src="../img/exp/casa-vacacional-1.jpg" class="d-block w-100" alt="casa-prefabricada">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Casa prefabircada en PVC</h5>
+              <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa prefabircada en PVC</h5>
               <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
             </div>
           </div>
           <div class="carousel-item">
             <img src="../img/exp/casa-pvc.jpg" class="d-block w-100" alt="casa-pvc">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Casa prefabircada en PVC</h5>
+              <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa prefabircada en PVC</h5>
               <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
             </div>
           </div>
