actualización de fotos y detalles

--- a/destacados/index.html
+++ b/destacados/index.html
@@ -20,22 +20,13 @@
 
   <!-- Custom styles for this template -->
   <link href="../css/clean-blog.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <!-- icono para la pagina -->
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
   <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
-
-<style>
-    .imagen-responsiva{
-    display:inline-flex;
-    max-width: 100%;
-    height: auto;
-    
-  }
-</style>
-
 </head>
 
 <body>
@@ -108,6 +99,35 @@
       </div>
     </div>
   </header>
+
+  <!-- Image Showcases -->
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Fully Responsive Design</h2>
+          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text">
+          <h2>Updated For Bootstrap 4</h2>
+          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Easy to Use &amp; Customize</h2>
+          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 <!-- Contenido principal -->
 <div class="container">
