--- a/experiencias/experiencia-casa-pvc.html
+++ b/experiencias/experiencia-casa-pvc.html
@@ -93,7 +93,7 @@
 </nav>
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('../img/exp/casa-vacacional-2.jpg')">
+<header class="masthead" style="background-image: url('../img/exp/casa-pvc/casa-vacacional-2.jpg')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
@@ -112,9 +112,9 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto centrar">
       <h2>Casa de Playa en La Boquilla - Cartagena de Indias D.T.</h2><br>
-      <p>La construcción de una casa comienza antes de iniciar la obra. Lo que se decida hacer previamente, influirá en cómo ocurrirá todo. Puede quedarse con lo que le contaron o marcar la diferencia con buenas decisiones. Es el caso de esta casa de Playa que se encuentra ubicada a orillas del mar en el Corregimiento de La Boquilla, expuesta a los inclementes factores de clima determinados por aspectos geográficos y atmosféricos presentes en esta región, como lo son; temperatura, humedad, radiación solar, vientos, lluvias, ambiente salino, entre otros y que de alguna manera generan elevados costos de sostenimiento a quien quiere mantener su vivienda como nueva.</p>
+      <p>La construcción de una casa comienza antes de iniciar la obra. Lo que se decida hacer previamente, influirá en cómo ocurrirá todo. Puede quedarse con lo que le contaron o marcar la diferencia con buenas decisiones. Es el caso de esta <b>Casa de Playa</b> que se encuentra ubicada a orillas del mar en el <b>Corregimiento de La Boquilla</b>, expuesta a los inclementes <b>factores de clima </b>determinados por aspectos geográficos y atmosféricos presentes en esta región, como lo son; temperatura, humedad, radiación solar, vientos, lluvias, ambiente salino, entre otros y que de alguna manera generan elevados <b>costos de sostenimiento</b> a quien quiere mantener su vivienda como nueva.</p>
       <p>
-        La elección del sistema RBS ha sido la mejor decisión de nuestro Cliente, pues con esto nuestro Cliente no tendrá que hacer inversiones significativas de dinero para la conservación de sus fachadas, muros internos, techos, puertas y ventanas, porque fueron construidas en PVC, y gracias a esto mismo podrá ahorrar un tanto más por cuenta del bajo consumo energético generado por el excelente aislamiento térmico y reflectividad de la luz. “Los ahorros en los costos de consumo energético y mantenimientos pueden marcar la diferencia.”
+        La elección del <b>sistema RBS</b> ha sido la mejor decisión de nuestro cliente, pues con esto nuestro cliente no tendrá que hacer inversiones significativas de dinero para la conservación de sus fachadas, muros internos, techos, puertas y ventanas, porque fueron <b>construidas en PVC</b>, y gracias a esto mismo podrá ahorrar un tanto más por cuenta del bajo consumo energético generado por el excelente aislamiento térmico y reflectividad de la luz. “Los ahorros en los costos de consumo energético y mantenimientos pueden marcar la diferencia.”
       </p>
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -124,23 +124,23 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../img/exp/casa-vacacional-2.jpg" class="d-block w-100" alt="casa-pvc">
+            <img src="../img/exp/casa-pvc/casa-vacacional-2.jpg" class="d-block w-100" alt="casa-pvc">
               <div class="carousel-caption d-none d-md-block" >
-                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa prefabircada en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa prefabricada en PVC</h5>
                 <!--<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/exp/casa-vacacional-1.jpg" class="d-block w-100" alt="casa-prefabricada">
+            <img src="../img/exp/casa-pvc/casa-vacacional-1.jpg" class="d-block w-100" alt="casa-prefabricada">
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa prefabircada en PVC</h5>
+              <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa prefabricada en PVC</h5>
               <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/exp/casa-pvc.jpg" class="d-block w-100" alt="casa-pvc">
+            <img src="../img/exp/casa-pvc/casa-vacacional-3.jpg" class="d-block w-100" alt="casa-pvc">
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa prefabircada en PVC</h5>
+              <h5 style="background-color: rgba(90, 120, 211, 0.6);">Interior de casa prefabricada en PVC</h5>
               <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
             </div>
           </div>
