--- a/experiencias/index.html
+++ b/experiencias/index.html
@@ -122,23 +122,23 @@
             <div class="card-body">
               <h5 class="card-title">Construcción Módulo de oficinas Fase III área 550m2 en 26 días</h5>
               <p class="card-text">Amviestruc había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más...</p>
-              <a href="experiencia-1.html" class="btn btn-primary">Conoce más</a>
+              <a href="experiencia-oficina-pvc.html" class="btn btn-primary">Conoce más</a>
             </div>
           </div>
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <img src="../img/exp/Reficar 3.png" class="card-img-top" alt="oficinas-pvc">
+            <img src="../img/exp/encerramientos/encerramiento-3.jpg" class="card-img-top" alt="oficinas-pvc">
             <div class="card-body">
               <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
-              <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
-              <a href="experiencia-2.html" class="btn btn-primary">Conoce más</a>
+              <p class="card-text"><b><i>“No quiero perder esa hermosa vista al mar…”</i></b> , fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
+              <a href="experiencia-encerramiento-pvc.html" class="btn btn-primary">Conoce más</a>
             </div>
           </div>
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <a href="#"><img src="../img/exp/casa-vacacional-2.jpg" class="card-img-top" alt="casas-prefebricadas"></a>
+            <a href="#"><img src="../img/exp/casa-pvc/casa-vacacional-2.jpg" class="card-img-top" alt="casas-prefebricadas"></a>
             <div class="card-body">
               <h5 class="card-title">Casa de Playa en La Boquilla - Cartagena de Indias D.T.</h5>
               <p class="card-text">La construcción de una casa comienza antes de iniciar la obra. Lo que se decida hacer previamente, influirá en cómo ocurrirá todo. Puede quedarse...</p>
-              <a href="experiencia-3.html" class="btn btn-primary">Conoce más</a>
+              <a href="experiencia-casa-pvc.html" class="btn btn-primary">Conoce más</a>
             </div>
           </div>
         </div>
