--- a/sectores/farmaceutico/index.html
+++ b/sectores/farmaceutico/index.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="../../css/clean-blog.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <!-- icono para la pagina -->
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
   <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
@@ -95,7 +96,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Farmaceutico</h1>
+            <h1>Farmacéutico</h1>
           </div>
         </div>
       </div>
@@ -109,67 +110,53 @@
         <h2 style="text-align: center;">INSTALACIONES DE ASEPTICAS PARA
           LA INDUSTRIA DE FARMACEUTICA
           </h2>
-          <p>La aséptica es fundamental en un laboratorio farmacéutico. Las construcciones con paneles en PVC y nuestros diseños cumplen estos requerimientos, la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control. <br><br>
+          <p>La <b>asepcia</b> es fundamental en un laboratorio farmacéutico. Las construcciones con <b>paneles en PVC</b> y nuestros diseños cumplen estos requerimientos, la combinación de los paneles de PVC, nuestra experiencia en el diseño y conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control. <br><br>
             El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm.
             <br><br>
-            Entre muchos beneficios para este sector tenemos:
-
-            <!-- beneficios -->
-            <table style="text-align: center; font-weight: bold;"> 
-
-                <tr>
-                  <td>
-                    Superficies asépticas. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="115" height="115"alt="aseptico">
-                  </td>
-                  <td>
-                    Resistente a químicos de limpieza. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="115" height="115" alt="limpieza"> 
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    Superficie Resistente al Moho.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115"alt="moho">
-                  </td>
-                  <td>
-                    Excelentes propiedades térmicas y reflectividad lumínica. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/reflection.svg" width="115" height="115" alt="moho">
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    Excelente acabado. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115" alt="excelente acabado">
-                  </td>
-                  <td>
-                    Aislante acústico. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115" alt="aislante acustico">
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    Bajo costo de mantenimiento.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115"alt="bajo mantenimiento">
-                  </td>
-                  <td>
-                    Ignífugo y autoextinguidle. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115"alt="ignifugo autoextinguible">
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    Norma Sismo-resistente.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115" alt="sismo resistente">
-                  </td>
-                  <td>
-                    Código Sanitario. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115"alt="codigo sanitario">
-                  </td>
-                </tr>
-            </table>
-          </p>
-
+            Entre muchos beneficios para este sector tenemos:</p>
+        <!-- beneficios -->
+        <div class="grilla">
+          <div class="beneficio1">
+            Superficies asépticas. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="90" height="115"alt="aseptico">
+          </div>
+          <div class="beneficio2">
+            Resistente a químicos de limpieza. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="90" height="90" alt="limpieza"> 
+          </div>
+          <div class="beneficio3">
+            Superficie Resistente al Moho.
+            <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="90" height="90"alt="moho">
+          </div>
+          <div class="beneficio4">
+            Excelentes propiedades térmicas y reflectividad lumínica. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/reflection.svg" width="90" height="90" alt="moho">
+          </div>
+          <div class="beneficio5">
+            Excelente acabado. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90" alt="excelente acabado">
+          </div>
+          <div class="beneficio6">
+            Aislante acústico. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislante acustico">
+          </div>
+          <div class="beneficio7">
+            Bajo costo de mantenimiento.
+            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="90" height="90"alt="bajo mantenimiento">
+          </div>
+          <div class="beneficio8">
+            Ignífugo y autoextinguidle. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90"alt="ignifugo autoextinguible">
+          </div>
+          <div class="beneficio9">
+            Norma Sismo-resistente.
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90" alt="sismo resistente">
+          </div>
+          <div class="beneficio10">
+            Código Sanitario. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90"alt="codigo sanitario">
+          </div>
+        </div>
       </div>
     </div>
   </div>
