--- a/sectores/minerita-petroleo/index.html
+++ b/sectores/minerita-petroleo/index.html
@@ -21,7 +21,8 @@
   <!-- Custom styles for this template -->
   <link href="../../css/clean-blog.css" rel="stylesheet">
   <!-- icono para la pagina -->
-  <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
+  <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">  
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <!-- uso de las metas -->
   <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,7 +97,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Mineria y petroleo</h1>
+            <h1>Minería y petróleo</h1>
           </div>
         </div>
       </div>
@@ -108,80 +109,71 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <h2 style="text-align: center;">CAMPAMENTOS 100% A LA MEDIDA UNIDADES MÓVILES Y PERMANENTES</h2>
-          <p>Nuestros proyectos brindan confort para mantener la salud, el bienestar y el rendimiento del personal de la compañía, incluso independiente de las condiciones ambientales externas. <br><br> Los paneles de PVC tienen excelentes propiedades de aislamiento térmico y sonoro, ayudando a la concentración de los trabajadores. <br><br>
-            Los campamentos en PVC cuentan con las redes esenciales: Agua, Luz, energía y Aire acondicionado y redes especiales voy  y datos, redes de detección de fuego  y gas, redes contraincendios.
-            Entre muchos beneficios para este sector tenemos:
+          <p>Nuestros proyectos brindan confort para mantener <b>la salud, el bienestar y el rendimiento del personal</b> de la compañía, incluso independiente de las condiciones ambientales externas. <br><br> Los paneles de PVC tienen excelentes propiedades de aislamiento térmico y sonoro, ayudando a la concentración de los trabajadores. <br><br>
+            Los campamentos en PVC cuentan con las redes esenciales: <b>Agua, Luz, energía y Aire acondicionado y redes especiales voz y datos, redes de detección de fuego  y gas, redes contraincendios.</b><br><br>
+            Entre muchos beneficios para este sector tenemos:<br>          </p>
+        <!-- beneficios -->
+        <div class="grilla">
+          <div class="beneficio1">
+            Durabilidad y resistencia. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="90" height="90"alt="casas resistentes">
+          </div>
+          <div class="beneficio2">
+            Excelente acabado. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90" alt="excelente acabado" > 
+          </div>
+          <div class="beneficio3">
+            Aislante térmico y acústico.
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislamiento termico">
+          </div>
+          <div class="beneficio4">
+            Rapidez de construcción. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="90" height="90"alt="construcciones rapidas">
+          </div>
+          <div class="beneficio5">
+            Bajo costo de mantenimiento. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="90" height="90"alt="bajo mantenimiento">
+          </div>
+          <div class="beneficio6">
+            No requiere acabados. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="90" height="90" alt="no acabados">
+          </div>
+          <div class="beneficio7">
+            Construcción limpia. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="90" height="90"alt="construccion limpia">
+          </div>
+          <div class="beneficio8">
+            Fabricación a la medida disminuyendo desperdicios. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/ruler.svg" width="90" height="90" alt="cero desperdicions">
+          </div>
+          <div class="beneficio9">
+            Desmontable - reutilizable.
+            <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="90" height="90" alt="reutilizable">
+          </div>
+          <div class="beneficio10">
+            Ignífugo y autoextinguidle. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90" alt="ignifugo autoextinguible">
+          </div>
+          <div class="beneficio11">
+            Liviano y transportable. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="90" height="90" alt="casas prefabricadas">
+          </div>
+          <div class="beneficio12">
+            Norma Sismo-resistente. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90"alt="sismo resistente">
+          </div>
+          <div class="beneficio13">
+            Código Sanitario. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90" alt="codigo sanitario">
+          </div>
+        </div>
 
-            <!-- beneficios -->
-            <table style="text-align: center; font-weight: bold;"> 
 
-              <tr>
-                <td>
-                  Durabilidad y resistencia. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115" alt="durabilidad">
-                </td>
-                <td>
-                  Excelente acabado. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115" alt="excelente-acabado"> 
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Aislante térmico y acústico. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115"  alt="aislante-termico-acustico">
-                </td>
-                <td>
-                  Rapidez de construcción. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115"  alt="construccion">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Bajo costo de mantenimiento.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115"  alt="bajo-mantenimiento">
-                </td>
-                <td>
-                  Construcción limpia. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="115" height="115"  alt="construcción">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Desmontable - reutilizable. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="115" height="115"  alt="portatil">
-                </td>
-                <td>
-                  No requiere acabados. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="115" height="115"  alt="excelentes-acabados">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Ignífugo y autoextinguidle. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115"  alt="ignifugo-autoextinguible">
-                </td>
-                <td>
-                  Liviano y transportable.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="115" height="115"  alt="liviano">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Norma Sismo-resistente. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115"  alt="Sismo-resistente">
-                </td>
-                <td>
-                  Código Sanitario. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115" alt="codigo-sanitario">
-                </td>
-              </tr>
-            </table>  
 
-          </p>
       </div>
     </div>
   </div>
-
+<hr>
   <!-- Footer -->
   <footer>
     <div class="container">
