--- a/sectores/plantaciones-ganaderia/index.html
+++ b/sectores/plantaciones-ganaderia/index.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="../../css/clean-blog.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <!-- icono para la pagina -->
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
     <!-- uso de las metas -->
@@ -110,79 +111,65 @@
         <h2 style="text-align: center;">INSTALACIONES DE ALTA CALIDAD PARA
           LA AGRICULTURA Y GANADERÍA
           </h2>
-          <p>Este sector exige facilidad de limpieza, durabilidad, clima controlado, amplios espacios y diseños con propósito. Nuestra propuesta es el sistema constructivo basado en  PVC, aplica a Plantaciones como:
+          <p>Este sector exige facilidad de limpieza, durabilidad, clima controlado, amplios espacios y diseños con propósito. Nuestra propuesta es el sistema constructivo basado en  PVC, aplica a Plantaciones como:</p>
             <ul>
               <li>Ganadera</li>
               <li>Avícola</li>
               <li>Porcícola</li>
               <li>Otros</li>
             </ul>
-          la combinación de los paneles de PVC, nuestra experiencia en el diseño y   conocimientos de normativa ayuda a que su empresa sea rentable y cumpla con las exigencias de organismos de control
+          <p>
+          La combinación de los <b>paneles de PVC</b>, nuestra <b>experiencia</b> en el diseño y   conocimientos de <b>normativa</b> ayuda a que su empresa sea <b>rentable</b> y cumpla con las exigencias de <b>organismos de control</b>. <br><br>
             El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm</p>
           <p>
             Entre muchos beneficios para este sector tenemos:
           </p>  
-          <p>
-              <!-- beneficios -->
-              <table style="text-align: center; font-weight: bold;"> 
-
-                <tr>
-                  <td>
-                    Ambiente de cultivo optimizado (Temperatura y Humedad). <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/crop.svg" width="115" height="115" alt="temperatura">
-                  </td>
-                  <td>
-                    Superficie Resistente al Moho.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115" alt="humedad"> 
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    Excelentes propiedades térmicas y reflectividad lumínica. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/thermometer.svg" width="115" height="115" alt="propiedades-termicas">
-                  </td>
-                  <td>
-                    Durabilidad y resistencia. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115" alt="durabilidad-resistencia">
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    Aislante acústico. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115" alt="aislante-termico">
-                  </td>
-                  <td>
-                    Excelente acabado. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115" alt="excelente-acabado">
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    Rapidez de construcción. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115" alt="rapidez-construccion">
-                  </td>
-                  <td>
-                    Bajo costo de mantenimiento.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115" alt="bajo mantenimiento">
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    Ignífugo y autoextinguidle. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115" alt="ignifico-autoextinguible">
-                  </td>
-                  <td>
-                    Norma Sismo-resistente.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115" alt="sismo-resistentes">
-                  </td>
-                </tr>
-                <th colspan="2">
-                    Código Sanitario. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115"  alt="codigo-sanitario">
-                </th> 
-             </table> 
-  
-          </p>    
+          <div class="grilla">
+            <div class="beneficio1">
+              Ambiente de cultivo optimizado (Temperatura y Humedad). <br>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/crop.svg" width="90" height="90" alt="temperatura">
+            </div>
+            <div class="beneficio2">
+              Superficie Resistente al Moho.
+              <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="90" height="90" alt="humedad"> 
+            </div>
+            <div class="beneficio3">
+              Excelentes propiedades térmicas y reflectividad lumínica. <br>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/thermometer.svg" width="90" height="90" alt="propiedades-termicas">
+            </div>
+            <div class="beneficio4">
+              Durabilidad y resistencia. <br>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="90" height="90" alt="durabilidad-resistencia">
+            </div>
+            <div class="beneficio5">
+              Aislante acústico. <br>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislante-termico">
+            </div>
+            <div class="beneficio6">
+              Excelente acabado. <br>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90" alt="excelente-acabado">
+            </div>
+            <div class="beneficio7">
+              Rapidez de construcción. <br>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="90" height="90" alt="rapidez-construccion">
+            </div>
+            <div class="beneficio8">
+              Ignífugo y autoextinguidle. <br>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90" alt="ignifico-autoextinguible">
+            </div>
+            <div class="beneficio9">
+              Desmontable - reutilizable.
+              <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="90" height="90" alt="reutilizable">
+            </div>
+            <div class="beneficio10">
+              Norma Sismo-resistente.
+              <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90" alt="sismo-resistentes">
+            </div>
+            <div class="beneficio11">
+              Código Sanitario. <br>
+              <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90"  alt="codigo-sanitario">
+            </div>
+          </div>
       </div>
     </div>
   </div>
