--- a/soluciones/estructura-metalicas/index.html
+++ b/soluciones/estructura-metalicas/index.html
@@ -111,13 +111,13 @@
           QUE ESTIMULA LA PRODUCTIVIDAD Y MODERNIZA ESPACIOS…“
           </h2>
           <p>
-            A la vanguardia de las nuevas tendencias de construcciones modernas, Amviestruc genera soluciones constructivas, 
+            A la vanguardia de las nuevas tendencias de construcciones modernas, <b>Amviestruc</b> genera soluciones constructivas, 
             encontrando formas innovadoras y creativas para entregar a nuestros clientes edificios destacados desarrollados 
             en tiempos reducidos, con los mejores costos del mercado y sin limitantes en la ubicación del proyecto.
           </p>
           <p>
             Contamos con el respaldo de personas expertas en cada una de los procesos, ofreciendo un enfoque en el 
-            cumplimiento de las expectativas de nuestros clientes fundamentados en la honestidad, confiabilidad y responsabilidad.
+            cumplimiento de las expectativas de nuestros clientes fundamentados en la <b>honestidad, confiabilidad y responsabilidad.</b> 
           </p>
             <div>
               <img src="../../img/sol/estructuras-metalicas-5.jpg"
