--- a/experiencias/experiencia-encerramiento-pvc.html
+++ b/experiencias/experiencia-encerramiento-pvc.html
@@ -31,13 +31,12 @@
   <!--Se incluye css para experiencias-->
   <link rel="stylesheet" type="text/css" href="estilo.css">
   <!--Se incluye css para experiencias-->
-  <!-- icono para la pagina -->
-  <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
-  <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
-
+    <!-- icono para la pagina -->
+    <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
+    <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
 </head>
 
 <body>
@@ -99,14 +98,14 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('../img/exp/campamentos-pvc.jpg')">
+  <header class="masthead" style="background-image: url('../img/exp/encerramientos/encerramiento-3.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>MÓDULOS DE OFICINAS EN PVC</h1>
-            <!--<span class="subheading">Casos de éxito!!!</span>-->
+            <h1>CERRAMIENTOS EN PVC</h1>
+            <!--<span class="subheading">Conoce nuestros casos de éxito</span>-->
           </div>
         </div>
       </div>
@@ -117,39 +116,54 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto centrar">
-        <h2>Construcción Modulo de oficinas Fase III área 550m2 en 26 días</h2><br>
-        <p>Amviestruc había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más ambiciosos proyectos del país, pero la competencia crecía con el paso de los días y las obras en las cuales podíamos participar disminuían al mismo ritmo.   </p>
+        <h2>Cerramiento arquitectónico con vista al Mar Caribe</h2><br>
         <p>
-          Era necesario encontrar un diferencial que destacara nuestra marca frente a nuestro Cliente. Para lograr este objetivo teníamos que ofrecer una ventaja competitiva. Después de analizar los condicionantes al interior del proyecto encontramos que uno de los factores predominantes era el tiempo de ejecución de los servicios contratados. Así, que iniciamos la evaluación y diseño de un sistema que nos permitiera obtener menos días en la construcción manteniendo los costos y la calidad. Fueron varias las estrategias implementadas mejorando cada vez más el resultado, pero sin alcanzar el diferenciador en tiempo deseado, hasta que en un trabajo destacado de nuestro grupo de ingeniaría y operaciones encontramos la formula perfecta para ofrecer a nuestro Cliente la certeza de construir un modulo de 550m2 con instalaciones complejas e incluso suministrando e instalando todo el mobiliario requerido para más de 45 puestos de trabajo en 26 días.
+            <b><i>“No quiero perder esa hermosa vista al mar…”</i></b>, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica ciudad de <b>Cartagena de Indias</b>. Teníamos la tarea de desarrollar un cerramiento muy extenso, que bordeara las instalaciones de nuestro Cliente y que le permitiera tener control y seguridad sin utilizar construcciones convencionales, y adicionalmente, sin perder la privilegiada vista al mar con la que cuentan los trabajadores y directivos de esta Compañía lo que la convierte en un sitio de trabajo muy tranquilo y exclusivo.
         </p>
         <p>
-          Definitivamente marcamos la diferencia, lo que generó a nuestra Compañía, AMVIESTRUC, un reconocimiento por nuestra gran velocidad de construcción.
+            Nuestro grupo de diseño e ingeniería emprendió la labor, implementando <b>materiales novedosos</b> de gran calidad y resistencia a las particulares <b>condiciones del clima </b>en esta región, como lo es el salitre, adicionalmente, con un diseño innovador y poco común que satisficiera el requerimiento “principal” de nuestro Cliente. Logrando la construcción de un destacado cerramiento compuesto por <b></b>paneles de PVC de alta rigidez, soportados en una cimentación de concreto especial, con múltiples cortes de 7cm de ancho, distanciados cada 25cm, con una altura prudente que le permite al espectador disfrutar de una inimaginable vista mientras trabaja. <b>"…y la hermosa vista al mar no se perdió…”</b>. 
         </p>
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/exp/colegio-pvc-1.jpg" class="d-block w-100" alt="colegio-pvc">
+              <img src="../img/exp/encerramientos/cerramiento-pvc.jpg" class="d-block w-100" alt="cerramientos-pvc">
                 <div class="carousel-caption d-none d-md-block" >
-                  <h5 style="background-color: rgba(90, 120, 211, 0.6);">Colegio en PVC</h5>
+                  <h5 style="background-color: rgba(90, 120, 211, 0.6);">Vista cerramientos en PVC</h5>
                   <!--<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/exp/casa-pvc.jpg" class="d-block w-100" alt="casas-prefabricadas">
+              <img src="../img/exp/encerramientos/cerramiento-pvc-3.jpg" class="d-block w-100" alt="cerramientos-pvc">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa Prefabricada en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Vista cerramientos en PVC</h5>
                 <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/exp/exp1.jpg" class="d-block w-100" alt="oficinas-pvc">
+              <img src="../img/exp/encerramientos/cerramiento-pvc-1.jpg" class="d-block w-100" alt="cerramientos-prefabricados">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Casa Prefabricada en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Vista cerramientos en PVC</h5>
+                <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../img/exp/encerramientos/encerramiento-3.jpg" class="d-block w-100" alt="cerramientos-pvc">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Vista cerramientos en PVC</h5>
+                <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../img/exp/encerramientos/cerramiento-pvc-2.jpg" class="d-block w-100" alt="cerramientos-prefabricados">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Vista cerramientos en PVC</h5>
                 <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
@@ -196,7 +210,6 @@
         </div>
       </div>
   </footer>
-
   <!-- Bootstrap core JavaScript -->
   <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
