--- a/experiencias/experiencia-oficina-pvc.html
+++ b/experiencias/experiencia-oficina-pvc.html
@@ -31,12 +31,13 @@
   <!--Se incluye css para experiencias-->
   <link rel="stylesheet" type="text/css" href="estilo.css">
   <!--Se incluye css para experiencias-->
-    <!-- icono para la pagina -->
-    <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
-    <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
+  <!-- icono para la pagina -->
+  <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
+  <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
+
 </head>
 
 <body>
@@ -98,14 +99,14 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('../img/exp/Reficar 3.png')">
+  <header class="masthead" style="background-image: url('../img/exp/campamentos-pvc.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>CERRAMIENTOS EN PVC</h1>
-            <!--<span class="subheading">Conoce nuestros casos de éxito</span>-->
+            <h1>MÓDULOS DE OFICINAS EN PVC</h1>
+            <!--<span class="subheading">Casos de éxito!!!</span>-->
           </div>
         </div>
       </div>
@@ -116,39 +117,64 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto centrar">
-        <h2>Cerramiento arquitectónico con vista al Mar Caribe</h2><br>
-        <p>Amviestruc había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más ambiciosos proyectos del país, pero la competencia crecía con el paso de los días y las obras en las cuales podíamos participar disminuían al mismo ritmo.   </p>
+        <h2>Construcción Modulo de oficinas Fase III área 550m2 en 26 días</h2><br>
+        <p><b>Amviestruc</b> había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más ambiciosos proyectos del país, pero la competencia crecía con el paso de los días y las obras en las cuales podíamos participar disminuían al mismo ritmo.   </p>
         <p>
-            “No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica ciudad de Cartagena de Indias. Teníamos la tarea de desarrollar un cerramiento muy extenso, que bordeara las instalaciones de nuestro Cliente y que le permitiera tener control y seguridad sin utilizar construcciones convencionales, y adicionalmente, sin perder la privilegiada vista al mar con la que cuentan los trabajadores y directivos de esta Compañía lo que la convierte en un sitio de trabajo muy tranquilo y exclusivo.
+          Era necesario encontrar un diferencial que destacara nuestra marca frente a nuestro Cliente. Para lograr este objetivo teníamos que ofrecer una <b>ventaja competitiva</b>. Después de analizar los condicionantes al interior del proyecto encontramos que uno de los factores predominantes era el <b>tiempo de ejecución</b> de los servicios contratados. Así, que iniciamos la evaluación y diseño de un sistema que nos permitiera obtener menos días en la construcción manteniendo los costos y la calidad. Fueron varias las estrategias implementadas mejorando cada vez más el resultado, pero sin alcanzar el diferenciador en tiempo deseado, hasta que en un trabajo destacado de nuestro grupo de ingeniaría y operaciones encontramos la formula perfecta para ofrecer a nuestro Cliente la certeza de construir un <b>módulo de 550m2</b> con instalaciones complejas e incluso suministrando e instalando todo el mobiliario requerido para más de 45 puestos de trabajo en <b>26 días</b>.
         </p>
         <p>
-            Nuestro grupo de diseño e ingeniería emprendió la labor, implementando materiales novedosos de gran calidad y resistencia a las particulares condiciones del clima en esta región, como lo es el salitre, adicionalmente, con un diseño innovador y poco común que satisficiera el requerimiento “principal” de nuestro Cliente. Logrando la construcción de un destacado cerramiento compuesto por paneles de PVC de alta rigidez, soportados en una cimentación de concreto especial, con múltiples cortes de 7cm de ancho, distanciados cada 25cm, con una altura prudente que le permite al espectador disfrutar de una inimaginable vista mientras trabaja. “…y la hermosa vista al mar no se perdió…”. 
+          Definitivamente marcamos la diferencia, lo que generó a nuestra Compañía, <b>AMVIESTRUC</b>, un reconocimiento por nuestra gran velocidad de construcción.
         </p>
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/exp/REFICAR 2.jpg" class="d-block w-100" alt="oficinas-prefabricadas">
+              <img src="../img/exp/oficinas/oficina-pvc-1.jpg" class="d-block w-100" alt="oficina-pvc">
                 <div class="carousel-caption d-none d-md-block" >
-                  <h5 style="background-color: rgba(90, 120, 211, 0.6);">Oficinas Prefabricadas en PVC</h5>
+                  <h5 style="background-color: rgba(90, 120, 211, 0.6);">Preconstrucción</h5>
                   <!--<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>-->
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/exp/IMG-20170509-WA0003.jpg" class="d-block w-100" alt="campamentos-pvc">
+              <img src="../img/exp/oficinas/oficina-pvc-2.JPG" class="d-block w-100" alt="oficina-pvc">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Campamentos Prefabricados en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Transporte a sitio</h5>
                 <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/exp/galeria001- campamentos009.jpg" class="d-block w-100" alt="campamentos-prefabricados">
+              <img src="../img/exp/oficinas/oficina-pvc-3.png" class="d-block w-100" alt="oficinas-pvc">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Campamentos Prefabricados en PVC</h5>
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Proceso de ensamblaje en sitio</h5>
+                <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../img/exp/oficinas/oficina-pvc-4.png" class="d-block w-100" alt="oficinas-pvc">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Ensamble en sitio</h5>
+                <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../img/exp/oficinas/oficina-pvc-5.jpg" class="d-block w-100" alt="oficinas-pvc">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Entrega al cliente</h5>
+                <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="../img/exp/oficinas/oficina-pvc-6.jpg" class="d-block w-100" alt="oficinas-pvc">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="background-color: rgba(90, 120, 211, 0.6);">Interior de la edificación</h5>
                 <!--<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
               </div>
             </div>
@@ -195,6 +221,7 @@
         </div>
       </div>
   </footer>
+
   <!-- Bootstrap core JavaScript -->
   <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
