--- a/sectores/construccion/index.html
+++ b/sectores/construccion/index.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="../../css/clean-blog.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <!-- icono para la pagina -->
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
   <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
@@ -95,7 +96,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Construccion</h1>
+            <h1>Construcción</h1>
           </div>
         </div>
       </div>
@@ -109,82 +110,67 @@
         <h2 style="text-align: center;">CONSTRUCCIONES DE ALTA CALIDAD
           TÉCNICAS MODERNAS Y NOVEDOSAS
           </h2>
-          <p>Las aplicaciones de los paneles de PVC en la construcción abarcan un gran rango como Vivienda, Institucional, Bodegas y Otros. Construir nunca ha sido tan fácil, práctico, seguro y eficiente. <br>
-            El sistema constructivo basado en  PVC se adapta fácilmente a cualquier diseño y tipo de vivienda, ofreciendo espacios confortables. <br>
+          <p>Las aplicaciones de los <b>paneles de PVC</b> en la construcción abarcan un gran rango como <b>Vivienda, Institucional, Bodegas y Otros</b>. Construir nunca ha sido tan fácil, práctico, seguro y eficiente. <br><br>
+            El sistema constructivo basado en  PVC se adapta fácilmente a cualquier diseño y tipo de vivienda, ofreciendo espacios confortables. <br><br>
             El diseño único de los paneles de PVC, permite acoplar una serie de paneles y accesorios en materiales termoplásticos de última generación, para crear muros y cubiertas, en menor tiempo que un sistema tradicional. Dependiendo del proyecto puede utilizarse con espesor de muros de 100 mm o 64 mm 
             la combinación de los paneles de PVC y nuestra experiencia en el diseño y ensamblaje le ayudan a controlar los costos y a maximizar su ganancia. <br><br>
-            Entre muchos beneficios para este sector tenemos:
+            Entre muchos beneficios para este sector tenemos:</p>
+        <!-- beneficios -->
+        <div class="grilla">
+          <div class="beneficio1">
+            Durabilidad y resistencia. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="90" height="90"alt="casas resistentes">
+          </div>
+          <div class="beneficio2">
+            Excelente acabado. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90" alt="excelente acabado" > 
+          </div>
+          <div class="beneficio3">
+            Aislante térmico y acústico.
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislamiento termico">
+          </div>
+          <div class="beneficio4">
+            Rapidez de construcción. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="90" height="90"alt="construcciones rapidas">
+          </div>
+          <div class="beneficio5">
+            Bajo costo de mantenimiento. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="90" height="90"alt="bajo mantenimiento">
+          </div>
+          <div class="beneficio6">
+            No requiere acabados. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="90" height="90" alt="no acabados">
+          </div>
+          <div class="beneficio7">
+            Construcción limpia. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="90" height="90"alt="construccion limpia">
+          </div>
+          <div class="beneficio8">
+            Fabricación a la medida disminuyendo desperdicios. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/ruler.svg" width="90" height="90" alt="cero desperdicions">
+          </div>
+          <div class="beneficio9">
+            Desmontable - reutilizable.
+            <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="90" height="90" alt="reutilizable">
+          </div>
+          <div class="beneficio10">
+            Ignífugo y autoextinguidle. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90" alt="ignifugo autoextinguible">
+          </div>
+          <div class="beneficio11">
+            Liviano y transportable. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="90" height="90" alt="casas prefabricadas">
+          </div>
+          <div class="beneficio12">
+            Norma Sismo-resistente. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90"alt="sismo resistente">
+          </div>
+          <div class="beneficio13">
+            Código Sanitario. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90" alt="codigo sanitario">
+          </div>
+        </div>
 
-            <!-- beneficios -->
-            <table style="text-align: center; font-weight: bold;"> 
-
-              <tr>
-                <td>
-                  Durabilidad y resistencia. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115"alt="casas resistentes">
-                </td>
-                <td>
-                  Excelente acabado. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115" alt="excelente acabado" > 
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Aislante térmico y acústico.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115" alt="aislamiento termico">
-                </td>
-                <td>
-                  Rapidez de construcción. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115"alt="construcciones rapidas">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Bajo costo de mantenimiento. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115"alt="bajo mantenimiento">
-                </td>
-                <td>
-                  No requiere acabados. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="115" height="115" alt="no acabados">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Construcción limpia. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="115" height="115"alt="construccion limpia">
-                </td>
-                <td>
-                  Fabricación a la medida disminuyendo desperdicios. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/ruler.svg" width="115" height="115" alt="cero desperdicions">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Desmontable - reutilizable.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="115" height="115" alt="reutilizable">
-                </td>
-                <td>
-                  Ignífugo y autoextinguidle. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115" alt="ignifugo autoextinguible">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Liviano y transportable.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="115" height="115" alt="casas prefabricadas">
-                </td>
-                <td>
-                  Norma Sismo-resistente. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115"alt="sismo resistente">
-                </td>
-              </tr>
-              <th colspan="2">
-                Código Sanitario. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115" alt="codigo sanitario">
-              </th>
-          </table>
-           
-          </p>
       </div>
     </div>
   </div>
