--- a/sectores/salud/index.html
+++ b/sectores/salud/index.html
@@ -20,16 +20,10 @@
 
   <!-- Custom styles for this template -->
   <link href="../../css/clean-blog.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
   <!-- icono para la pagina -->
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
-<style>
-  .imagen-responsiva{
-    display:inline-flex;
-    max-width: 100%;
-    height: auto;
-    
-  }
-</style>
+
   <!-- uso de las metas -->
   <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -126,75 +120,60 @@
         </ul>
       </p>
        
-      <p> En la actualidad la pandemia presiona a la infraestructura hospitalaria en Colombia a un rápido crecimiento, cumpliendo con la normativa del sector. La combinación de los paneles de PVC con nuestra experiencia le ayudarán a adaptarse a los nuevos retos nacionales.</p>
+      <p> En la actualidad la pandemia presiona a la infraestructura hospitalaria en Colombia a un rápido crecimiento, cumpliendo con la normativa del sector. La combinación de los <b>paneles de PVC</b> con nuestra experiencia le ayudarán a adaptarse a los nuevos retos nacionales.</p>
 
       <p> Entre muchos beneficios para este sector tenemos:</p>
-      <p>
         <!-- beneficios -->
-        <table style="text-align: center; font-weight: bold;"> 
-
-            <tr>
-              <td>
-                 Altamente Aséptico. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="115" height="115"  alt="aseptico">
-              </td>
-              <td>
-                Resistente a productos químicos altamente agresivos y corrosivos. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="115" height="115" alt="resistente-corrosión"> 
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Espacios libres de humedad.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115" alt="humedad">
-              </td>
-              <td>
-                Superficies fáciles de limpiar y desinfectar.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/wipe.svg" width="115" height="115" alt="limpieza">
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Espacios y habitaciones confortables. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/bed.svg" width="115" height="115" alt="confort">
-              </td>
-              <td>
-                Aislante térmico y acústico. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115" alt="aislante termico">
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Excelente acabado.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115"  alt="excelente acabado">
-              </td>
-              <td>
-                Rapidez de construcción. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115" alt="rapidez construcción">
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Bajo costo de mantenimiento.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115"  alt="bajo costo">
-              </td>
-              <td>
-                Ignífugo y autoextinguidle. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115"  alt="ignifugo-autoextinguible">
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Norma Sismo-resistente.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115" alt="sismo-resistente">
-              </td>
-              <td>
-                Código Sanitario. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115" alt="codigo-sanitario">
-              </td>
-            </tr>
-        </table> 
-      </p>
+        <div class="grilla">
+          <div class="beneficio1">
+            Altamente Aséptico. <br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="90" height="90"  alt="aseptico">
+          </div>
+          <div class="beneficio2">
+            Resistente a productos químicos altamente agresivos y corrosivos.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="90 " height="90" alt="resistente-corrosión"> 
+          </div>
+          <div class="beneficio3">
+            Espacios libres de humedad.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="90" height="90" alt="humedad">
+          </div>
+          <div class="beneficio4">
+            Superficies fáciles de limpiar y desinfectar.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/wipe.svg" width="90" height="90" alt="limpieza">
+          </div>
+          <div class="beneficio5">
+            Espacios y habitaciones confortables.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/bed.svg" width="90" height="90" alt="confort">
+          </div>
+          <div class="beneficio6">
+            Aislante térmico y acústico.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="90" height="90" alt="aislante termico">
+          </div>
+          <div class="beneficio7">
+            Excelente acabado.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="90" height="90"  alt="excelente acabado">
+          </div>
+          <div class="beneficio8">
+            Rapidez de construcción.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="90" height="90" alt="rapidez construcción">
+          </div>
+          <div class="beneficio9">
+            Bajo costo de mantenimiento.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="90" height="90"  alt="bajo costo">
+          </div>
+          <div class="beneficio10">
+            Ignífugo y autoextinguidle.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="90" height="90"  alt="ignifugo-autoextinguible">
+          </div>
+          <div class="beneficio11">
+            Norma Sismo-resistente.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="90" height="90" alt="sismo-resistente">
+          </div>
+          <div class="beneficio12">
+            Código Sanitario.<br>
+            <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="90" height="90" alt="codigo-sanitario">
+          </div>
+        </div>
 
     </div>
   </div>
