--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <div class="carrusel">
                 <div class="product" id="product_0">
                   <img src="img/Inicio/cliente/puerto-bahia.png" alt="puerto bahia"/>
-                  <h6>Almacenamiento de Combustibles</h6>
+                  <h6>Almacenamiento</h6>
                 </div>
                 <div class="product" id="product_1">
                   <img src="img/Inicio/cliente/oceanos.png"  alt="oceanos"/>
@@ -230,6 +230,8 @@
   </main>
  
 <hr>
+
+
 
 <!-- pie de pagina -->
 <div id="wapp">
@@ -268,7 +270,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/clean-blog.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.js"></script> -->
   <script src="js/inicio.js"></script>
 
 
